--- a/client/index.html
+++ b/client/index.html
@@ -2,15 +2,37 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Name Generator</title>
+    <title>Hi, my name is...</title>
+    <link rel="shortcut icon" type="image/png" href="./wave.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" type="image/png" href="./static/icon.png">
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css?family=Press+Start+2P&display=swap" rel="stylesheet">
     <script src="script.js"></script>
 </head>
+
 <body>
-
-
+<div class="app">
+  <div class="nametag">
+    <div class="nametag-top">
+      <h1>👋 Hi, my name is...</h1>
+    </div>
+    <div class="nametag-middle">
+      <span id="name" class="name">Sample</span>
+    </div>
+    <div class="nametag-bottom">
+      <label for="prefix">
+        Prefix:
+        <input class="prefix" name="prefix" type="text"/>
+      </label>
+      <label for="temperature">
+        Uniqueness (/100):
+        <input class="temperature" name="temperature" type="number"/>
+      </label>
+      <button onclick="generateDummy()" class="generate">Generate</button>
+    </div>
+  </div>
+</div>
+<footer>
+  <a href="https://github.com/QiuhongAnnaWei/hackbrown2021" target="_blank">[Source]</a>
+</footer>
 </body>
 </html>
