fixed requirements and figuring out routing

--- a/client/index.html
+++ b/client/index.html
@@ -27,7 +27,7 @@
         Uniqueness (/100):
         <input class="temperature" name="temperature" type="number"/>
       </label>
-      <button onclick="generateDummy()" class="generate">Generate</button>
+      <button onclick="generate()" class="generate">Generate</button>
     </div>
   </div>
 </div>
