model and connecting to frontend

--- a/server/static/index.html
+++ b/server/static/index.html
@@ -21,11 +21,11 @@
     <div class="nametag-bottom">
       <label for="prefix">
         Prefix:
-        <input class="prefix" name="prefix" type="text"/>
+        <input class="prefix" name="prefix" id="prefix" type="text"/>
       </label>
       <label for="temperature">
         Uniqueness (/100):
-        <input class="temperature" name="temperature" type="number"/>
+        <input class="temperature" name="temperature" id="temperature" type="number"/>
       </label>
       <button onclick="generate()" class="generate">Generate</button>
     </div>
