Aligned fields of GUI

--- a/server/static/index.html
+++ b/server/static/index.html
@@ -31,12 +31,10 @@
       </div>
 
       <div class="nametag-bottom">
-        <div style="display: flex; flex-direction: column;">
-          <label for="prefix">
-            Similar word:
-            <input class="prefix" name="prefix" id="prefix" type="text" />
-          </label>
-        </div>
+        <label for="prefix" style="display: flex; flex-direction: column;">
+          Similar word:
+          <input class="prefix" name="prefix" id="prefix" type="text" />
+        </label>
         <button onclick="generate()" class="generate">Generate</button>
       </div>
     </div>
