--- a/server/static/index.html
+++ b/server/static/index.html
@@ -31,9 +31,9 @@
       </div>
 
       <div class="nametag-bottom">
-        <label for="prefix" style="display: flex; flex-direction: column;">
+        <label for="similar" style="display: flex; flex-direction: column;">
           Similar word:
-          <input class="prefix" name="prefix" id="prefix" type="text" />
+          <input class="similar" name="similar" id="similar" type="text" />
         </label>
         <button onclick="generate()" class="generate">Generate</button>
       </div>
